Java11, testcontainers and SolR9