@@ -1,4 +1,5 @@
 package dk.dbc.laesekompas.suggester.webservice;
+
 /*
  * Copyright (C) 2019 DBC A/S (http://dbc.dk/)
  *
@@ -19,7 +20,8 @@ package dk.dbc.laesekompas.suggester.webservice;
  *
  * File created: 15/03/2019
  */
-
+import com.fasterxml.jackson.core.JsonParser;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import dk.dbc.laesekompas.suggester.webservice.solr.SolrLaesekompasSuggester;
 import dk.dbc.laesekompas.suggester.webservice.solr.SuggestQueryResponse;
 import dk.dbc.laesekompas.suggester.webservice.solr.SuggestType;
@@ -27,10 +29,7 @@ import dk.dbc.laesekompas.suggester.webservice.solr_entity.AuthorSuggestionEntit
 import dk.dbc.laesekompas.suggester.webservice.solr_entity.SuggestionEntity;
 import org.apache.solr.client.solrj.SolrQuery;
 import org.apache.solr.client.solrj.SolrServerException;
-import org.apache.solr.client.solrj.impl.HttpSolrClient;
-import org.apache.solr.client.solrj.response.QueryResponse;
-import org.apache.solr.client.solrj.response.SuggesterResponse;
-import org.apache.solr.client.solrj.response.Suggestion;
+import org.apache.solr.client.solrj.impl.Http2SolrClient;
 import org.hamcrest.BaseMatcher;
 import org.hamcrest.Description;
 import org.hamcrest.collection.IsIterableContainingInOrder;
@@ -40,13 +39,23 @@ import org.mockito.Mockito;
 
 import java.io.IOException;
 import java.util.*;
+import org.apache.solr.common.util.NamedList;
+import org.apache.solr.common.util.SimpleOrderedMap;
+import org.mockito.Matchers;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 
 public class SolrLaesekompasSuggesterTest {
+
+    private static final ObjectMapper O = new ObjectMapper()
+            .enable(JsonParser.Feature.ALLOW_UNQUOTED_FIELD_NAMES)
+            .enable(JsonParser.Feature.ALLOW_SINGLE_QUOTES);
+
     private static SolrLaesekompasSuggester solrLaesekompasSuggester;
+    private Http2SolrClient solrClient;
 
     private class QuerySolrQueryMatcher extends BaseMatcher<SolrQuery> {
+
         String query;
 
         public QuerySolrQueryMatcher(String query) {
@@ -58,7 +67,7 @@ public class SolrLaesekompasSuggesterTest {
             if (item == null || SolrQuery.class != item.getClass()) {
                 return false;
             }
-            return ((SolrQuery)item).getParams("suggest.q")[0].equals(query);
+            return ( (SolrQuery) item ).getParams("suggest.q")[0].equals(query);
         }
 
         @Override
@@ -69,28 +78,25 @@ public class SolrLaesekompasSuggesterTest {
 
     @Before
     public void setupBean() throws IOException, SolrServerException {
-        HttpSolrClient solr = Mockito.mock(HttpSolrClient.class);
-        solrLaesekompasSuggester = new SolrLaesekompasSuggester(solr);
-
-        Mockito.when(testInfixBlendedSortWeight.getSuggesterResponse()).thenReturn(testSuggesterResponseSortWeight);
-        Mockito.when(testSuggesterResponseSortWeight.getSuggestions()).thenReturn(testSuggestionHandlesSortWeight);
-        Mockito.when(
-                solr.query(Mockito.argThat(new QuerySolrQueryMatcher("test_infix_blended_sort_by_weight")))
-        ).thenReturn(testInfixBlendedSortWeight);
-        Mockito.when(testInfixBlendedSortTerm.getSuggesterResponse()).thenReturn(testSuggesterResponseSortTerm);
-        Mockito.when(testSuggesterResponseSortTerm.getSuggestions()).thenReturn(testSuggestionHandlesSortTerm);
-        Mockito.when(
-                solr.query(Mockito.argThat(new QuerySolrQueryMatcher("test_infix_blended_sort_by_term")))
-        ).thenReturn(testInfixBlendedSortTerm);
-        Mockito.when(testInfixBlendedSortBoth.getSuggesterResponse()).thenReturn(testSuggesterResponseSortBoth);
-        Mockito.when(testSuggesterResponseSortBoth.getSuggestions()).thenReturn(testSuggestionHandlesSortBoth);
-        Mockito.when(
-                solr.query(Mockito.argThat(new QuerySolrQueryMatcher("test_infix_blended_sort_by_both")))
-        ).thenReturn(testInfixBlendedSortBoth);
+        this.solrClient = Mockito.mock(Http2SolrClient.class);
+        solrLaesekompasSuggester = new SolrLaesekompasSuggester(solrClient);
     }
 
     @Test
     public void testOrderBlendedInfixByWeight() throws IOException, SolrServerException {
+        NamedList<Object> solrResponse = new NamedList<>(O.readValue(
+                "{suggest: {" +
+                " analyzer:{queryterm:{suggestions:[]}}," +
+                " infix:{queryterm:{suggestions:[]}}," +
+                " blended_infix:{queryterm:{suggestions:[" +
+                "  {term: 'jannett', weight: 2, payload: 'AUTHOR|Jannett'}," +
+                "  {term: 'scott', weight: 1, payload: 'AUTHOR|Scott'}," +
+                "  {term: 'astrid', weight: 3, payload: 'AUTHOR|Astrid'}" +
+                " ]}}," +
+                " fuzzy:{queryterm:{suggestions:[]}}" +
+                "}}", Map.class));
+        Mockito.when(solrClient.request(Mockito.any(), Matchers.anyString()))
+                .thenReturn(solrResponse);
         SuggestQueryResponse response = solrLaesekompasSuggester
                 .suggestQuery("test_infix_blended_sort_by_weight", SuggestType.ALL);
         List<SuggestionEntity> infixBlendedSuggestions = response.getInfixBlended();
@@ -99,6 +105,19 @@ public class SolrLaesekompasSuggesterTest {
 
     @Test
     public void testOrderBlendedInfixByTermWhenWeightIsEqual() throws IOException, SolrServerException {
+        NamedList<Object> solrResponse = new NamedList<>(O.readValue(
+                "{suggest: {" +
+                " analyzer:{queryterm:{suggestions:[]}}," +
+                " infix:{queryterm:{suggestions:[]}}," +
+                " blended_infix:{queryterm:{suggestions:[" +
+                "  {term: 'c', weight: 1, payload: 'AUTHOR|c'}," +
+                "  {term: 'b', weight: 1, payload: 'AUTHOR|b'}," +
+                "  {term: 'a', weight: 1, payload: 'AUTHOR|a'}" +
+                " ]}}," +
+                " fuzzy:{queryterm:{suggestions:[]}}" +
+                "}}", Map.class));
+        Mockito.when(solrClient.request(Mockito.any(), Matchers.anyString()))
+                .thenReturn(solrResponse);
         SuggestQueryResponse response = solrLaesekompasSuggester
                 .suggestQuery("test_infix_blended_sort_by_term", SuggestType.ALL);
         List<SuggestionEntity> infixBlendedSuggestions = response.getInfixBlended();
@@ -107,52 +126,43 @@ public class SolrLaesekompasSuggesterTest {
 
     @Test
     public void testOrderBlendedInfixByTermAndWeight() throws IOException, SolrServerException {
+        NamedList<Object> solrResponse = new NamedList<>(O.readValue(
+                "{suggest: {" +
+                " analyzer:{queryterm:{suggestions:[]}}," +
+                " infix:{queryterm:{suggestions:[]}}," +
+                " blended_infix:{queryterm:{suggestions:[" +
+                "  {term: 'b', weight: 1, payload: 'AUTHOR|b'}," +
+                "  {term: 'b', weight: 3, payload: 'AUTHOR|b'}," +
+                "  {term: 'a', weight: 1, payload: 'AUTHOR|a'}," +
+                "  {term: 'c', weight: 3, payload: 'AUTHOR|c'}," +
+                "  {term: 'a', weight: 3, payload: 'AUTHOR|a'}," +
+                "  {term: 'g', weight: 2, payload: 'AUTHOR|g'}" +
+                " ]}}," +
+                " fuzzy:{queryterm:{suggestions:[]}}" +
+                "}}", Map.class));
+        Mockito.when(solrClient.request(Mockito.any(), Matchers.anyString()))
+                .thenReturn(solrResponse);
         SuggestQueryResponse response = solrLaesekompasSuggester
                 .suggestQuery("test_infix_blended_sort_by_both", SuggestType.ALL);
         List<SuggestionEntity> infixBlendedSuggestions = response.getInfixBlended();
         assertThat(infixBlendedSuggestions, IsIterableContainingInOrder.contains(byWeightTerm1, byWeightTerm2,
-                byWeightTerm3, byWeightTerm4, byWeightTerm5, byWeightTerm6));
+                                                                                 byWeightTerm3, byWeightTerm4, byWeightTerm5, byWeightTerm6));
     }
 
-    private static final QueryResponse testInfixBlendedSortWeight = Mockito.mock(QueryResponse.class);
-    private static final SuggesterResponse testSuggesterResponseSortWeight = Mockito.mock(SuggesterResponse.class);
-    private static final Map<String, List<Suggestion>> testSuggestionHandlesSortWeight = new HashMap<String, List<Suggestion>>() {{
-        put("analyzer", Collections.emptyList());
-        put("infix", Collections.emptyList());
-        put("blended_infix", Arrays.asList(
-                new Suggestion("jannett", 2, "AUTHOR|Jannett"),
-                new Suggestion("scott", 1, "AUTHOR|Scott"),
-                new Suggestion("astrid", 3, "AUTHOR|Astrid")));
-        put("fuzzy", Collections.emptyList());
-    }};
-
-    private static final QueryResponse testInfixBlendedSortTerm = Mockito.mock(QueryResponse.class);
-    private static final SuggesterResponse testSuggesterResponseSortTerm = Mockito.mock(SuggesterResponse.class);
-    private static final Map<String, List<Suggestion>> testSuggestionHandlesSortTerm = new HashMap<String, List<Suggestion>>() {{
-        put("analyzer", Collections.emptyList());
-        put("infix", Collections.emptyList());
-        put("blended_infix", Arrays.asList(
-                new Suggestion("c", 1, "AUTHOR|c"),
-                new Suggestion("b", 1, "AUTHOR|b"),
-                new Suggestion("a", 1, "AUTHOR|a")));
-        put("fuzzy", Collections.emptyList());
-    }};
-
-    private static final QueryResponse testInfixBlendedSortBoth = Mockito.mock(QueryResponse.class);
-    private static final SuggesterResponse testSuggesterResponseSortBoth = Mockito.mock(SuggesterResponse.class);
-    private static final Map<String, List<Suggestion>> testSuggestionHandlesSortBoth = new HashMap<String, List<Suggestion>>() {{
-        put("analyzer", Collections.emptyList());
-        put("infix", Collections.emptyList());
-        put("blended_infix", Arrays.asList(
-                new Suggestion("b", 1, "AUTHOR|b"),
-                new Suggestion("b", 3, "AUTHOR|b"),
-                new Suggestion("a", 1, "AUTHOR|a"),
-                new Suggestion("c", 3, "AUTHOR|c"),
-                new Suggestion("a", 3, "AUTHOR|a"),
-                new Suggestion("g", 2, "AUTHOR|g")
-        ));
-        put("fuzzy", Collections.emptyList());
-    }};
+    private static final NamedList<Object> testInfixBlendedSortWeightNL = new SimpleOrderedMap<>(
+            new AbstractMap.SimpleEntry[] {
+                new AbstractMap.SimpleEntry<String, Object>(
+                        "suggest", Map.of(
+                                "analyzer", Map.of("suggestions", Collections.emptyList()),
+                                "infix", Map.of("suggestions", Collections.emptyList()),
+                                "blended_infix", Map.of("suggestions", List.of(
+                                                        Map.of("term", "jannett", "weight", 2, "payload", "AUTHOR|Jannett"),
+                                                        Map.of("term", "scott", "weight", 1, "payload", "AUTHOR|Scott"),
+                                                        Map.of("term", "astrid", "weight", 3, "payload", "AUTHOR|Astrid"))),
+                                "fuzzy", Map.of("suggestions", Collections.emptyList())
+                        ))
+            }
+    );
 
     private static final SuggestionEntity byWeight1 = new AuthorSuggestionEntity("astrid", 3, "Astrid");
     private static final SuggestionEntity byWeight2 = new AuthorSuggestionEntity("jannett", 2, "Jannett");
